[gd_scene load_steps=4 format=2]

[ext_resource path="res://elements/Loading.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture2D" id=2]

[sub_resource type="Animation" id=1]
resource_name = "loop"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1.4, 2.9 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.160784 ), Color( 1, 1, 1, 0.988235 ) ]
}

[node name="Loading" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.988235 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -62.5
offset_right = 62.5
offset_bottom = 62.5
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/loop = SubResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.4321
offset_top = 84.4321
offset_right = 24.5679
offset_bottom = 98.4321
grow_horizontal = 2
grow_vertical = 2
text = "Loading"
align = 1
valign = 1

[node name="trackandartist" type="Timer" parent="."]
wait_time = 0.5
[connection signal="alldone" from="." to="." method="_on_Loading_alldone"]
[connection signal="bootup" from="." to="." method="_on_Loading_bootup"]
[connection signal="next" from="." to="." method="_on_Loading_next"]
[connection signal="timeout" from="trackandartist" to="." method="_on_trackandartist_timeout"]
